Fix contrast ratio on headings

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -90,7 +90,7 @@ footer p{
 }
 .content h3, h2 {
     text-align:center;
-    color: #B89470;
+    color: #755A3A;
 }
 .content-about {
     padding: 10px 0px; 
@@ -431,7 +431,7 @@ input[type="submit"]:hover {
     }
     .content h3, h2 {
         text-align:center;
-        color: #B89470;
+        color: #755A3A;
     }
     .content-about {
         padding: 10px 0px; 
@@ -751,7 +751,7 @@ input[type="submit"]:hover {
     }
     .content h3, h2 {
         text-align:center;
-        color: #B89470;
+        color: #755A3A;
     }
     .content-about {
         padding: 10px 0px; 
